[gd_scene load_steps=15 format=3 uid="uid://b6yuvgcp26wej"]

[ext_resource type="Script" path="res://interface/scoreboard/scoreboard.gd" id="1_fqqas"]
[ext_resource type="FontFile" uid="uid://cxu2vtaotchpf" path="res://interface/fonts/scrawl/nsj_12.ttf" id="2_6jo3s"]

[sub_resource type="Animation" id="Animation_ql4ma"]
length = 0.001
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonsContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Placement:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.00305025),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Name:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.00305025),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Score:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(-0.00305025),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Stage:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(-0.00305025),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_q0fki"]
resource_name = "start_animation"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonsContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.65, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Placement:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.65, 1),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Name:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.65, 1),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Score:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.65, 1),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Stage:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.65, 1),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nhjge"]
_data = {
"RESET": SubResource("Animation_ql4ma"),
"start_animation": SubResource("Animation_q0fki")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i03v5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gx0t2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_51pxv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u13qj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ks1sb"]

[sub_resource type="LabelSettings" id="LabelSettings_53ebx"]
font = ExtResource("2_6jo3s")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dq5tf"]
font = ExtResource("2_6jo3s")
font_size = 24
font_color = Color(0, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lp551"]
font = ExtResource("2_6jo3s")
font_size = 24
font_color = Color(0, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oynjq"]
font = ExtResource("2_6jo3s")
font_size = 24

[node name="ScoreBoard" type="CanvasLayer" node_paths=PackedStringArray("_animation")]
script = ExtResource("1_fqqas")
_animation = NodePath("Animation")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0.717647)

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nhjge")
}

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.5
offset_top = -74.0
offset_right = 106.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 0

[node name="Continue" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(160, 30)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.61339, 0.61339, 0.61339, 1)
theme_override_colors/font_pressed_color = Color(0.206035, 0.434082, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_6jo3s")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_i03v5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gx0t2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_51pxv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_u13qj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ks1sb")
text = "Retornar
"
flat = true

[node name="Shadow" type="Label" parent="ButtonsContainer/Continue"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
text = "Retornar
"
label_settings = SubResource("LabelSettings_53ebx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Placement" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 157.0
offset_top = 127.0
offset_right = 203.0
offset_bottom = 239.0
size_flags_horizontal = 0

[node name="Placement1" type="Label" parent="Placement"]
show_behind_parent = true
layout_mode = 2
text = "1ST"
label_settings = SubResource("LabelSettings_dq5tf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Placement2" type="Label" parent="Placement"]
show_behind_parent = true
layout_mode = 2
text = "2ND"
label_settings = SubResource("LabelSettings_dq5tf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Placement3" type="Label" parent="Placement"]
show_behind_parent = true
layout_mode = 2
text = "3RD"
label_settings = SubResource("LabelSettings_dq5tf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Placement4" type="Label" parent="Placement"]
show_behind_parent = true
layout_mode = 2
text = "4TH"
label_settings = SubResource("LabelSettings_dq5tf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 210.0
offset_top = 98.0
offset_right = 276.0
offset_bottom = 239.0

[node name="Name" type="Label" parent="Name"]
show_behind_parent = true
layout_mode = 2
text = "NOME"
label_settings = SubResource("LabelSettings_lp551")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name1" type="Label" parent="Name"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name2" type="Label" parent="Name"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name3" type="Label" parent="Name"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name4" type="Label" parent="Name"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 282.0
offset_top = 98.0
offset_right = 360.0
offset_bottom = 239.0

[node name="Score" type="Label" parent="Score"]
show_behind_parent = true
layout_mode = 2
text = "SCORE"
label_settings = SubResource("LabelSettings_lp551")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score1" type="Label" parent="Score"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score2" type="Label" parent="Score"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score3" type="Label" parent="Score"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score4" type="Label" parent="Score"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stage" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 366.0
offset_top = 98.0
offset_right = 430.0
offset_bottom = 239.0

[node name="Score5" type="Label" parent="Stage"]
show_behind_parent = true
layout_mode = 2
text = "LEVEL"
label_settings = SubResource("LabelSettings_lp551")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level1" type="Label" parent="Stage"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level2" type="Label" parent="Stage"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level3" type="Label" parent="Stage"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level4" type="Label" parent="Stage"]
show_behind_parent = true
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_oynjq")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
[connection signal="mouse_entered" from="ButtonsContainer/Continue" to="." method="_on_continue_mouse_entered"]
[connection signal="pressed" from="ButtonsContainer/Continue" to="." method="_on_continue_pressed"]
